--- a/ingredient.html
+++ b/ingredient.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link type="text/css" rel="stylesheet" href="ingredient.css"/>
-	<script type="text/javascript" src="ingredientv2.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>  
-	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+	<link type="text/css" rel=""http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
 	<link href=' http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
 	<title>Fridge</title>
 </head>
